--- a/rrt_star_global_planner/package.xml
+++ b/rrt_star_global_planner/package.xml
@@ -31,6 +31,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>nav_core</exec_depend>
 
+  <depend>visualization_msgs</depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
