--- a/splined_relaxed_a_star/CMakeLists.txt
+++ b/splined_relaxed_a_star/CMakeLists.txt
@@ -41,9 +41,8 @@ find_package(Eigen3 REQUIRED)
 # # CATKIN_DEPENDS: catkin_packages dependent projects also need
 # # DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-
-  # INCLUDE_DIRS include
-  # LIBRARIES com
+  INCLUDE_DIRS include
+  LIBRARIES splined_relaxed_a_star
   # CATKIN_DEPENDS message_runtime
   CATKIN_DEPENDS roscpp rospy std_msgs fpp_msgs nav_core
 
