--- a/rrt_star_global_planner/package.xml
+++ b/rrt_star_global_planner/package.xml
@@ -33,6 +33,9 @@
 
   <depend>visualization_msgs</depend>
 
+  <depend>splined_voronoi</depend>
+
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
