--- a/prm_global_planner/package.xml
+++ b/prm_global_planner/package.xml
@@ -31,6 +31,8 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <depend>splined_voronoi</depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
