--- a/prm_global_planner/CMakeLists.txt
+++ b/prm_global_planner/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   splined_voronoi
+  fp_utils
 )
 
 # # System dependencies are found with CMake's conventions
@@ -25,7 +26,7 @@ find_package(NLopt)
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS nav_core roscpp rospy std_msgs splined_voronoi
+  CATKIN_DEPENDS nav_core roscpp rospy std_msgs splined_voronoi fp_utils
 )
 
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
